syntax = "proto3";

package products;

option go_package = "github.com/jassoec/grpc-microservices/protogen/golang/products";

service ProductsService {
  rpc GetProduct (FindProductRequest) returns (Product) {}
  rpc CreateProduct (CreateProductRequest) returns (Product) {}
  rpc UpdateProduct (UpdateProductRequest) returns (Product) {}
  rpc DeleteProduct (FindProductRequest) returns (Product) {}
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse) {}
}

message FindProductRequest {
  string product_id = 1;
}

message Product {
  string product_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 available_quantity = 5;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  int32 available_quantity = 4;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 available_quantity = 5;
}

message ListProductsRequest {
  repeated string ids = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
}

